--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -16,6 +16,7 @@
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
+/* //===================================================================// */
 
 .SearchForm {
   display: flex;
@@ -27,12 +28,12 @@
   overflow: hidden;
 }
 
-.SearchForm_button {
+.SearchFormButton {
   display: inline-block;
   width: 48px;
   height: 48px;
   border: 0;
-  background-image: url("https://image.flaticon.com/icons/svg/149/149852.svg");
+  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
   background-size: 40%;
   background-repeat: no-repeat;
   background-position: center;
@@ -42,11 +43,11 @@
   outline: none;
 }
 
-.SearchForm_button:hover {
+.SearchFormButton:hover {
   opacity: 1;
 }
 
-.SearchForm_button_label {
+.SearchFormButtonLabel {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -58,7 +59,7 @@
   border: 0;
 }
 
-.SearchForm_input {
+.SearchFormInput {
   display: inline-block;
   width: 100%;
   font: inherit;
@@ -69,7 +70,7 @@
   padding-right: 4px;
 }
 
-.SearchForm_input::placeholder {
+.SearchFormInput::placeholder {
   font: inherit;
   font-size: 18px;
 }
